--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -21,7 +21,7 @@ h2 {
 input, select, textarea, button {
     width: 100%;
     padding: 10px 15px;
-    margin: 10px 0px 10px 0px;
+    margin: 10px 0 10px 0;
     box-sizing: border-box;
     border-radius: 3px;
     background-color: transparent;
@@ -67,7 +67,7 @@ button:hover {
     width: 100%;
     background-color: #f8f8f8;
     position: absolute;
-    padding: 20px 0px 10px 0px;
+    padding: 20px 0 10px 0;
 }
 
 .logo {
@@ -128,7 +128,7 @@ button:hover {
 }
 
 .contato-principal {
-    margin: 0px 60px 60px 40px;
+    margin: 0 60px 60px 40px;
 }
 
 .chamada {
@@ -153,7 +153,14 @@ button:hover {
 }
 
 .titulo-pagina {
-    padding: 100px 0px 60px 0px;
+    padding: 100px 0 60px 0;
+    background-color: #2a9ee2;
+    text-align: center;
+}
+
+.titulo-pagina-2 {
+    padding: 70px 0 10px 0;
+    margin-bottom: 10px;
     background-color: #2a9ee2;
     text-align: center;
 }
@@ -185,5 +192,15 @@ button:hover {
 }
 
 .redes-sociais img {
-    margin: 0px 15px 0px 15px;
+    margin: 0 15px 0 15px;
+}
+
+.pagination li {
+    display: inline;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.pagination ul {
+    list-style: none;
 }
