--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -147,7 +147,7 @@ button:hover {
 
 .conteudo-pagina {
     width: 100%;
-    height: 100%;
+    height: auto;
     text-align: center;
     margin-bottom: 100px;
 }
@@ -203,4 +203,10 @@ button:hover {
 
 .pagination ul {
     list-style: none;
+}
+
+.copyright {
+    background-color: red;
+    text-align: center;
+    font-family: "DejaVu Sans", sans-serif;
 }
